# jon-py-portfolio

./: pyproject.toml
src/jon_py_portfolio/: .flake8  main.py
tests/: test_jon_py_portfolio.py
