[tool.poetry]
name = "jon-py-portfolio"
version = "0.1.0"
description = ""
authors = ["Jon Clayton <m87tech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyportfolioopt = "^1.4.1"
yfinance = "^0.1.59"
FinQuant = "^0.2.2"
CurrencyConverter = "^0.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
